--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "passwordkeeper",
+  "name": "passwordkeeper.types",
   "version": "1.0.0",
-  "description": "Secure Password Manager",
-  "main": "index.js",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "description": "Shared types for Password Keeper",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
