Created a basic express server and an object for controlling it
Skeleton routes have been added for the public-key and graphql
endpoints. Logging has been configured via winston, set to keep
records for 30 days. Jest has been configured and tests have been
created for the apiServer to ensure it starts and stops correctly
and has the proper routes.

--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -1,11 +1,27 @@
 {
   "name": "passwordkeeper.api-service",
   "version": "1.0.0",
-  "description": "RESTful API for Password Keeper",
-  "main": "index.js",
+  "description": "API Microservice for Password Keeper",
+  "main": "../../dist/api-service/src",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint",
+    "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ../../dist/api-service && tsc",
+    "start": "dotenvx run  -- node ../../dist/api-service/src/index.js",
+    "dev": "dotenvx run  -- ts-node ./src/index.ts",
+    "test": "jest",
+    "test:dev": "jest --watch"
   },
   "author": "Anthony Tropeano",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@dotenvx/dotenvx": "^0.44.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21"
+  }
 }
