--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -5,5 +5,6 @@
     "declarationMap": true,
     "outDir": "../../dist/types"
   },
+  "references": [{"path": "../api-service"}],
   "include": ["src"]
 }
