--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "files": [],
   "references": [
-    { "path": "./packages/ui" },
-    { "path": "./packages/types" },
-    { "path": "./packages/api-service" }
+    {"path": "./packages/ui"},
+    {"path": "./packages/types"},
+    {"path": "./packages/api-service"}
   ],
   "compilerOptions": {
     "strict": true,
@@ -11,9 +11,12 @@
     "outDir": "dist",
     "composite": true,
     "declaration": true,
+    "target": "ESNext",
+    "module": "NodeNext",
     "declarationMap": true,
+    "esModuleInterop": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": ["node_modules", "**/*.spec.ts", ".env*"]
+  "include": ["eslint.config.mjs"]
 }
