Installed nodemon and Mongoose. Created a User Model with TDD

--- a/packages/api-service/tsconfig.json
+++ b/packages/api-service/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/api-service",
+    "outDir": "./dist",
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true
