--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -2,26 +2,43 @@
   "name": "passwordkeeper.api-service",
   "version": "1.0.0",
   "description": "API Microservice for Password Keeper",
-  "main": "../../dist/api-service/src",
+  "main": "./dist/src/index.js",
   "scripts": {
     "lint": "eslint",
-    "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ../../dist/api-service && tsc",
-    "start": "dotenvx run  -- node ../../dist/api-service/src/index.js",
-    "dev": "dotenvx run  -- ts-node ./src/index.ts",
     "test": "jest",
-    "test:dev": "jest --watch"
+    "test:dev": "jest --watch",
+    "dev": "nodemon",
+    "dev-nodemon": "dotenvx run  -- ts-node ./src/index.ts",
+    "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ./dist && tsc",
+    "start": "dotenvx run  -- node ./dist/src/index.js"
   },
   "author": "Anthony Tropeano",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.10.4",
     "@dotenvx/dotenvx": "^0.44.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.1.3"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts",
+    "ignore": [
+      "src/**/*.spec.ts"
+    ],
+    "exec": "npm run dev-nodemon"
   }
 }
