--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
   "compilerOptions": {
     "strict": true,
     "baseUrl": ".",
-    "outDir": "dist",
     "composite": true,
     "declaration": true,
     "target": "ESNext",
@@ -18,5 +17,20 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["eslint.config.mjs"]
+  "include": ["eslint.config.mjs"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "packages/*/node_modules",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/*.spec.tsx",
+    "**/*.test.tsx",
+    "**/*.d.ts",
+    "**/*.config.js",
+    "**/*.config.ts",
+    "**/*.config.mjs",
+    "**/*.config.cjs",
+    "**/*.config.json"
+  ]
 }
