Removed the workspace aspet on the monorepo.
While this will stay a 'monorepo` each package will stand on its
own ensuring that they can be deployed individually. But we can
still have reusable types and even logic between them. For dev
purposes, npm link is being used.

--- a/packages/api-service/tsconfig.json
+++ b/packages/api-service/tsconfig.json
@@ -2,10 +2,12 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
+    "rootDir": "./src",
     "declaration": true,
     "declarationMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo"
   },
-  "references": [{"path": "../types"}],
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts"]
 }
