--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -2,21 +2,19 @@
   "name": "passwordkeeper.api-service",
   "version": "1.0.0",
   "description": "API Microservice for Password Keeper",
-  "main": "./dist/src/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "lint": "eslint",
-    "test": "jest",
-    "test:dev": "jest --watch",
-    "dev": "nodemon",
-    "dev-nodemon": "dotenvx run  -- ts-node ./src/index.ts",
-    "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ./dist && tsc",
-    "start": "dotenvx run  -- node ./dist/src/index.js"
+    "start": "node --env-file=./.env  ./dist/index.js",
+    "test": "node --env-file=./.env ./node_modules/.bin/jest",
+    "test:dev": "node --env-file=./.env ./node_modules/.bin/jest --watch",
+    "dev": "node --watch --env-file=./.env -r ts-node/register ./src/index.ts",
+    "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ./dist && tsc"
   },
   "author": "Anthony Tropeano",
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.4",
-    "@dotenvx/dotenvx": "^0.44.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
@@ -29,16 +27,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "nodemon": "^3.1.3"
-  },
-  "nodemonConfig": {
-    "watch": [
-      "src"
-    ],
-    "ext": "ts",
-    "ignore": [
-      "src/**/*.spec.ts"
-    ],
-    "exec": "npm run dev-nodemon"
+    "jest": "^29.7.0",
+    "passwordkeeper.types": "0.0.1",
+    "rimraf": "^5.0.7",
+    "ts-jest": "^29.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
