--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,12 +1,19 @@
 {
   "name": "passwordkeeper.types",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Shared types for Password Keeper",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "./dist/index.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "tsc --build --clean"
   },
   "author": "Anthony Tropeano",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1",
+    "typescript": "^5.4.5"
+  }
 }
