Working on user creation.
A user can be created in the database. When a new account is
created, a signed token is returned with a nonce that can
be used to access the next step. This next step allows the user
to ensure they are communicating with the right server and to
upload their public key.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,20 +7,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["eslint.config.mjs"],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "packages/*/node_modules",
-    "*.spec.ts",
-    "*.test.ts",
-    "*.spec.tsx",
-    "*.test.tsx",
-    "*.d.ts",
-    "*.config.js",
-    "*.config.ts",
-    "*.config.mjs",
-    "*.config.cjs",
-    "*.config.json"
-  ]
+  "include": ["eslint.config.mjs", "packages/**/*"],
+  "exclude": ["node_modules", "packages/**/node_modules", "packages/**/dist"]
 }
