Created test-scripts to complete the client-side actions. These
can be used for manual testing with Apollo Client. Through the
client, and using these scripts, users can be created, accounts
can be finalized, and created users can login.

Still need to implement the session logic for protected routes

--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -10,7 +10,9 @@
     "test:dev": "rimraf /logs && node --env-file=./.env ./node_modules/.bin/jest --watch --detectOpenHandles",
     "dev": "rimraf /logs && node --watch --env-file=./.env -r ts-node/register ./src/index.ts",
     "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ./dist && tsc",
-    "complete-account": "node --env-file=./.env -r ts-node/register ./scripts/complete-account.ts"
+    "complete-account": "node --env-file=./.env -r ts-node/register ./test-scripts/complete-account.ts",
+    "login-challenge": "node --env-file=./.env -r ts-node/register ./test-scripts/login-challenge.ts",
+    "complete-login": "node --env-file=./.env -r ts-node/register ./test-scripts/complete-login.ts"
   },
   "author": "Anthony Tropeano",
   "license": "ISC",
