Added concurrently and created a script that removes expired items
from the database in a concurrent process so it doesn't affect the
main server. Set to run every 15 minutes for now. Also created a
script for removing non-critical logs when starting the server
non-critical logs are non-production level logs. Logs do clean
themselves after 30 days.

--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -5,10 +5,14 @@
   "main": "./dist/index.js",
   "scripts": {
     "lint": "eslint",
-    "start": "node --env-file=./.env  ./dist/index.js",
-    "test": "rimraf /logs && node --env-file=./.env ./node_modules/.bin/jest --detectOpenHandles",
-    "test:dev": "rimraf /logs && node --env-file=./.env ./node_modules/.bin/jest --watch --detectOpenHandles",
-    "dev": "rimraf /logs && node --watch --env-file=./.env -r ts-node/register ./src/index.ts",
+    "clean-logs": "node ./dist/scripts/removeLogs.js",
+    "clean-logs-dev": "node -r ts-node/register ./src/scripts/removeLogs.ts",
+    "remove-expired-db-entries": "node --env-file=./.env ./dist/scripts/removeExpired.js 900000",
+    "remove-expired-db-entries-dev": "node --env-file=./.env -r ts-node/register ./src/scripts/removeExpired.ts 900000",
+    "start": "npm run clean-logs && concurrently \"node --env-file=./.env  ./dist/index.js\" \"npm run remove-expired-db-entries\"",
+    "test": "npm run clean-logs-dev && node --env-file=./.env ./node_modules/.bin/jest --detectOpenHandles",
+    "test:dev": "npm run clean-logs-dev && node --env-file=./.env ./node_modules/.bin/jest --watch --detectOpenHandles",
+    "dev": "npm run clean-logs-dev && concurrently \"node --watch --env-file=./.env -r ts-node/register ./src/index.ts\" \"npm run remove-expired-db-entries-dev\"",
     "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ./dist && tsc",
     "complete-account": "node --env-file=./.env -r ts-node/register ./test-scripts/complete-account.ts",
     "login-challenge": "node --env-file=./.env -r ts-node/register ./test-scripts/login-challenge.ts",
@@ -19,6 +23,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
