--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -16,7 +16,8 @@
     "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ./dist && tsc",
     "complete-account": "node --env-file=./.env -r ts-node/register ./test-scripts/complete-account.ts",
     "login-challenge": "node --env-file=./.env -r ts-node/register ./test-scripts/login-challenge.ts",
-    "complete-login": "node --env-file=./.env -r ts-node/register ./test-scripts/complete-login.ts"
+    "complete-login": "node --env-file=./.env -r ts-node/register ./test-scripts/complete-login.ts",
+    "session-nonce": "node --env-file=./.env -r ts-node/register ./test-scripts/session-nonce.ts"
   },
   "author": "Anthony Tropeano",
   "license": "ISC",
