--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -37,7 +37,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "jest": "^29.7.0",
-    "passwordkeeper.types": "0.0.1",
+    "passwordkeeper.types": "file:../types",
     "rimraf": "^5.0.7",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
