--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -7,17 +7,19 @@
     "lint": "eslint",
     "clean-logs": "node ./dist/scripts/removeLogs.js",
     "clean-logs-dev": "node -r ts-node/register ./src/scripts/removeLogs.ts",
+    "seed": "node --env-file=./.env -r ts-node/register ./src/scripts/seedDatabase.ts",
+    "seed-dev": "node --env-file=./.env -r ts-node/register ./src/scripts/seedDatabase.ts",
     "remove-expired-db-entries": "node --env-file=./.env ./dist/scripts/removeExpired.js 900000",
+    "session-nonce": "node --env-file=./.env -r ts-node/register ./test-scripts/session-nonce.ts",
+    "complete-login": "node --env-file=./.env -r ts-node/register ./test-scripts/complete-login.ts",
+    "login-challenge": "node --env-file=./.env -r ts-node/register ./test-scripts/login-challenge.ts",
+    "complete-account": "node --env-file=./.env -r ts-node/register ./test-scripts/complete-account.ts",
+    "test": "npm run clean-logs-dev && node --env-file=./.env ./node_modules/.bin/jest --detectOpenHandles",
+    "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ./dist && tsc",
+    "test:dev": "npm run clean-logs-dev && node --env-file=./.env ./node_modules/.bin/jest --watch --detectOpenHandles",
     "remove-expired-db-entries-dev": "node --env-file=./.env -r ts-node/register ./src/scripts/removeExpired.ts 900000",
     "start": "npm run clean-logs && concurrently \"node --env-file=./.env  ./dist/index.js\" \"npm run remove-expired-db-entries\"",
-    "test": "npm run clean-logs-dev && node --env-file=./.env ./node_modules/.bin/jest --detectOpenHandles",
-    "test:dev": "npm run clean-logs-dev && node --env-file=./.env ./node_modules/.bin/jest --watch --detectOpenHandles",
-    "dev": "npm run clean-logs-dev && concurrently \"node --watch --env-file=./.env -r ts-node/register ./src/index.ts\" \"npm run remove-expired-db-entries-dev\"",
-    "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ./dist && tsc",
-    "complete-account": "node --env-file=./.env -r ts-node/register ./test-scripts/complete-account.ts",
-    "login-challenge": "node --env-file=./.env -r ts-node/register ./test-scripts/login-challenge.ts",
-    "complete-login": "node --env-file=./.env -r ts-node/register ./test-scripts/complete-login.ts",
-    "session-nonce": "node --env-file=./.env -r ts-node/register ./test-scripts/session-nonce.ts"
+    "dev": "npm run clean-logs-dev && concurrently \"node --watch --env-file=./.env -r ts-node/register ./src/index.ts\" \"npm run remove-expired-db-entries-dev\""
   },
   "author": "Anthony Tropeano",
   "license": "ISC",
