--- a/packages/api-service/tsconfig.json
+++ b/packages/api-service/tsconfig.json
@@ -9,5 +9,11 @@
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "test-scripts"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src/**/*.test.ts",
+    "test-scripts",
+    "src/graphql/controllers/testHelpers/*"
+  ]
 }
