--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,7 +2,7 @@
   "name": "passwordkeeper.types",
   "version": "0.0.1",
   "description": "Shared types for Password Keeper",
-  "main": "./dist/index.ts",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
