Added the Passwords Model and refactored existing tests
Also added a few more test cases to boos the test coverage.

--- a/packages/api-service/tsconfig.json
+++ b/packages/api-service/tsconfig.json
@@ -9,11 +9,5 @@
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo"
   },
   "include": ["src"],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "src/**/*.test.ts",
-    "test-scripts",
-    "src/graphql/controllers/testHelpers/*"
-  ]
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "test-scripts", "src/testHelpers/*"]
 }
