--- a/packages/api-service/tsconfig.json
+++ b/packages/api-service/tsconfig.json
@@ -8,6 +8,6 @@
     "esModuleInterop": true,
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "test-scripts", "src/testHelpers/*"]
+  "include": ["src", "test-scripts/encryptPasswordData.ts"],
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "test-scripts", "src/utils/testHelpers/*"]
 }
