--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -26,7 +26,9 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "graphql": "^16.8.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "winston": "^3.13.0",
