--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -5,15 +5,13 @@
   "main": "./dist/index.js",
   "scripts": {
     "lint": "eslint",
+    "build": " npm run lint && rimraf ./dist && tsc",
     "clean-logs": "node ./dist/scripts/removeLogs.js",
     "ts": "node --env-file=./.env -r ts-node/register",
-    "seed": "node --env-file=./.env ./dist/scripts/seedDatabase.js",
     "seed-dev": "npm run ts -- ./src/scripts/seedDatabase.ts",
+    "seed": "node --env-file=./.env ./dist/scripts/seedDatabase.js",
     "clean-logs-dev": "node -r ts-node/register ./src/scripts/removeLogs.ts",
-    "remove-expired-db-entries-dev": "npm run ts -- ./src/scripts/removeExpired.ts 900000",
-    "remove-expired-db-entries": "node --env-file=./.env ./dist/scripts/removeExpired.js 900000",
     "test": "npm run clean-logs-dev && node --env-file=./.env ./node_modules/.bin/jest --detectOpenHandles",
-    "build": "cd .. && cd types/ && npm run build && cd .. && cd api-service/ && npm run lint && rimraf ./dist && tsc",
     "test:dev": "npm run clean-logs-dev && node --env-file=./.env ./node_modules/.bin/jest --watch --detectOpenHandles",
     "start": "npm run clean-logs && concurrently \"node --env-file=./.env  ./dist/index.js\" \"npm run remove-expired-db-entries\"",
     "dev": "npm run clean-logs-dev && npm run seed-dev && concurrently \"node --watch --env-file=./.env -r ts-node/register ./src/index.ts\" \"npm run remove-expired-db-entries-dev\""
@@ -29,8 +27,9 @@
     "express-rate-limit": "^7.3.1",
     "graphql": "^16.8.1",
     "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1",
+    "mongoose": "^8.4.4",
+    "passwordkeeper.database": "file:../db",
+    "passwordkeeper.graphql": "file:../graphql",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
