--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -12,9 +12,17 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "declarationDir": "./dist/types",
-    "forceConsistentCasingInFileNames": true
+    "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo"
   },
-  "include": ["src/index.ts", "src/api-service/**/*"],
-  "exclude": ["node_modules", "dist"]
+
+  "extends": "../../tsconfig.json",
+  "include": ["src/**/*", "rollup.config.mjs"],
+  "exclude": [
+    "dist/**/*",
+    "test-scripts",
+    "node_modules",
+    ".rollup.cache/",
+    "src/**/*.test.ts",
+    "src/utils/testHelpers/*"
+  ]
 }
