--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "passwordkeeper.types",
-  "version": "0.0.1",
-  "description": "Shared types for Password Keeper",
-  "main": "./dist/index.js",
-  "types": "./dist/types/index.d.ts",
+  "name": "passwordkeeper.graphql",
+  "version": "1.0.0",
+  "description": "GraphQL module for Password Keeper",
+  "main": "dist/server/index.js",
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && rollup -c"
@@ -11,16 +10,19 @@
   "author": "Anthony Tropeano",
   "license": "ISC",
   "devDependencies": {
+    "@apollo/client": "^3.10.7",
+    "@apollo/server": "^4.10.4",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/express": "^4.17.21",
-    "express": "^4.19.2",
-    "mongoose": "^8.4.1",
+    "graphql": "^16.9.0",
+    "jest": "^29.7.0",
+    "passwordkeeper.types": "file:../types",
     "rimraf": "^5.0.7",
     "rollup": "^4.18.0",
     "rollup-plugin-dts": "^6.1.1",
-    "tslib": "^2.6.3",
-    "typescript": "^5.4.5"
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2"
   }
 }
