--- a/packages/graphql/tsconfig.server.json
+++ b/packages/graphql/tsconfig.server.json
@@ -1,8 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "NodeNext",
+    "target": "ES6",
+    "module": "ESNext",
     "strict": true,
     "sourceMap": true,
     "outDir": "./dist",
@@ -12,10 +11,10 @@
     "declarationMap": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "node",
     "declarationDir": "./dist/types",
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src", "test-scripts/encryptPasswordData.ts"],
-  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "test-scripts", "src/utils/testHelpers/*"]
+  "include": ["src/server/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
