--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/nodemailer": "^6.4.15",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "rimraf": "^5.0.7",
